--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     </span>
                 </button>
                 <div id="myDropdown" class="dropdown-content">
+
                     <div class="dropdownItems">
                         <h3>
                             Get Help
@@ -40,10 +41,32 @@
                             Read our documentation and FAQs, or get in touch.
                         </p>
                     </div>
-                    <div class="dropdownItems">2</div>
-                    <div class="dropdownItems">3</div>
-                    <div class="dropdownItems">4</div>
+                    <div class="dropdownItems">
+                        <h3>
+                            Extensions
+                        </h3>
+                        <p>
+                            Do even more with Assistants, plugins and integrations.
+                        </p>
+                    </div>
+                    <div class="dropdownItems">
+                        <h3>
+                            Events & Meetups
+                        </h3>
+                        <p>
+                            Discover and join your local Sketch community.
+                        </p>
+                    </div>
+                    <div class="dropdownItems">
+                        <h3>
+                            Blog
+                        </h3>
+                        <p>
+                            Get updates, articles and insights from the team.
+                        </p>
+                    </div>
                     <div class="dropdownItems">5</div>
+                    <div class="dropdownItems">6</div>
                 </div>
             </div>
             <a href="#">Pricing</a>
