--- a/index.html
+++ b/index.html
@@ -24,50 +24,57 @@
             <a href="">Design</a>
             <a href="">Collaborate</a>
             <a href="">Apps</a>
+            <a><button onclick="myFunction()" class="dropbtn">Resources⌄
+                    </button>
+            </a>
+            <div id="myDropdown" class="dropdown-content">
 
-            <div class="dropdown">
-                <button onclick="myFunction()" class="dropbtn">Resources
-                    <span id="arrowHead" class="dropbtn">
-                        ⌄
-                    </span>
-                </button>
-                <div id="myDropdown" class="dropdown-content">
-
-                    <div class="dropdownItems">
-                        <h3>
-                            Get Help
-                        </h3>
-                        <p>
-                            Read our documentation and FAQs, or get in touch.
-                        </p>
-                    </div>
-                    <div class="dropdownItems">
-                        <h3>
-                            Extensions
-                        </h3>
-                        <p>
-                            Do even more with Assistants, plugins and integrations.
-                        </p>
-                    </div>
-                    <div class="dropdownItems">
-                        <h3>
-                            Events & Meetups
-                        </h3>
-                        <p>
-                            Discover and join your local Sketch community.
-                        </p>
-                    </div>
-                    <div class="dropdownItems">
-                        <h3>
-                            Blog
-                        </h3>
-                        <p>
-                            Get updates, articles and insights from the team.
-                        </p>
-                    </div>
-                    <div class="dropdownItems">5</div>
-                    <div class="dropdownItems">6</div>
+                <div class="dropdownItems">
+                    <h3>
+                        Get Help
+                    </h3>
+                    <p>
+                        Read our documentation and FAQs, or get in touch.
+                    </p>
                 </div>
+                <div class="dropdownItems">
+                    <h3>
+                        Extensions
+                    </h3>
+                    <p>
+                        Do even more with Assistants, plugins and integrations.
+                    </p>
+                </div>
+                <div class="dropdownItems">
+                    <h3>
+                        Events & Meetups
+                    </h3>
+                    <p>
+                        Discover and join your local Sketch community.
+                    </p>
+                </div>
+                <div class="dropdownItems">
+                    <h3>
+                        Blog
+                    </h3>
+                    <p>
+                        Get updates, articles and insights from the team.
+                    </p>
+                </div>
+                <div class="dropdownItems">
+                    <p>
+                        There are no upcoming events.
+                    </p>
+                    <p>
+
+                        Want to host your own event? Get in touch.
+                    </p>
+                </div>
+                <div class="dropdownItems">
+                    Yesterday A complete guide to skeuomorphic design<br> 7d&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; ago Getting to know the Sketch toolbar<br> 19d &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;ago Made with Sketch: How Gavin Nelson puts the
+                    “icon” in “iconic”
+                </div>
+
             </div>
             <a href="#">Pricing</a>
         </div>
@@ -148,9 +155,56 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <div>
+            <h3>Product</h3>
+            <ul>
+                <li> Design
+                    <li> Collaborate</li>
+                    <li> Workspace</li>
+                    <li>Apps</li>
+                    <li>Extensions</li>
+                    <li>Updates</li>
+                    <li>Pricing</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Why Sketch</h3>
+            <ul>
+                <li>Sketch vs. Figma</li>
+                <li>Sketch vs. Adobe XD</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Learn</h3>
+            <ul>
+                <li>Blog</li>
+                <li>Documentation</li>
+                <li>Events & Meetups</li>
+                <li>Research Labs</li>
+                <li>Developer Platform</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Support</h3>
+            <ul>
+                <li>Help Center</li>
+                <li>Contact Us</li>
+                <li>Manage License</li>
+                <li>Service Status</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Company</h3>
+            <ul>
+                <li>About Us</li>
+                <li>Careers</li>
+                <li>Terms & Policies</li>
+                <li>Cookie Preferences</li>
+            </ul>
+        </div>
+    </div>
     <script src="js.js"></script>
 </body>
-
-</html>
 
 </html>
