--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -131,7 +132,7 @@
                         </p>
                         <button>Open the web app</button>
                     </div>
-                    <div class="img01 "><img src="images/middleIMG2.avif " alt=" "></div>
+                    <div><img class="img02" src="images/middleIMG2.avif " alt=" "></div>
                 </div>
             </div>
             <div class="bg03 ">
